<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:gravity="end"
    android:background="@color/black"
    tools:context=".MainActivity">



    <LinearLayout

        android:id="@+id/porfolio"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="0dp"
        android:gravity="center">

        <ImageView

            android:layout_width="270dp"
            android:layout_height="1250dp"
            android:src="@drawable/profile" />

    </LinearLayout>





    <EditText
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:id="@+id/text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/porfolioText"
        android:textColor="@color/white"
        android:textSize="22sp"

        />

    <TextView
        android:layout_marginTop="20dp"
        android:layout_below="@id/text"
        android:layout_marginLeft="27dp"
        android:id="@+id/text1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/porfoliotest1"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:drawableLeft="@drawable/ic_baseline_email_24"
        android:drawablePadding="10dp"

        />

    <TextView
        android:id="@+id/text2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text1"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_baseline_contact_phone_24"
        android:drawablePadding="10dp"
        android:text="@string/porfiletext2"
        android:textColor="@color/white"
        android:textSize="20sp"

        />

    <TextView
        android:id="@+id/text3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/text2"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="27dp"
        android:layout_marginTop="10dp"
        android:drawableLeft="@drawable/ic_baseline_location_on_24"
        android:drawablePadding="10dp"
        android:text="@string/porfiletext3"
        android:textColor="@color/white"
        android:textSize="20sp"

        />



    <LinearLayout
        android:id="@+id/firstButton"
        android:gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="0dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/Education"
            android:drawableLeft="@drawable/education_icon"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="Education"
            app:backgroundTint="@null"
            android:background="@drawable/round_button"
            />
        <Button
            android:id="@+id/skills"
            android:drawableLeft="@drawable/thumb_up_alt_24"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="Skills"
            android:layout_marginLeft="30dp"
            app:backgroundTint="@null"
            android:background="@drawable/round_button"
            />
    </LinearLayout>



    <LinearLayout
        android:layout_marginTop="20dp"
        android:id="@+id/secondButtons"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/hobies"
            android:drawableLeft="@drawable/hobies_icon"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:text="hobbies"
            app:backgroundTint="@null"
            android:background="@drawable/round_button"
            />

        <Button
            android:id="@+id/achivimets"
            android:drawableLeft="@drawable/ic_baseline_star_rate_24"
            android:layout_width="160dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30dp"
            android:text="achivimets"
            app:backgroundTint="@null"
            android:background="@drawable/round_button"
            />

</LinearLayout>


    <LinearLayout
        android:id="@+id/Exiteutton"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">


        <Button
            android:id="@+id/exitButton"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="Exit"
            app:backgroundTint="@null"
            android:background="@drawable/round_button"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="42dp"
        android:gravity="center">

        <TextView
            android:id="@+id/textCopyRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:text="@string/copyright"
            android:textColor="#a9a9a9"
            android:textSize="15sp"
            />

        <ImageView

            android:layout_width="15dp"
            android:layout_marginTop="10dp"
            android:layout_height="150dp"
            android:src="@drawable/ic_baseline_copyright_24" />
        <TextView
            android:id="@+id/textCopyRight1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text2"
            android:layout_centerHorizontal="true"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="10dp"
            android:drawablePadding="10dp"
            android:text="@string/copyright1"
            android:textColor="#a9a9a9"
            android:textSize="15sp"

            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">
        <TextView
            android:id="@+id/textCopyRight3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="10dp"
            android:text="@string/textrightCopy"
            android:textColor="#a9a9a9"
            android:textSize="15sp"


            />



</LinearLayout>


</LinearLayout>