<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity6"
    android:background="#C0C0C0"
    >



    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="408dp"
                android:layout_height="wrap_content"
                android:background="#271f27"
                android:minHeight="?actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextColor="@color/white" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Achieves"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="180dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="46dp"
                android:layout_height="31dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintHorizontal_bias="0.347"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.52"
                app:srcCompat="@drawable/ic_baseline_star_rate_24"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="831dp"
                android:orientation="vertical">


                <TextView

                    android:id="@+id/activity3text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="40dp"
                    android:gravity="center"
                    android:text="@string/activity5Text1"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <ImageView
                    android:layout_width="309dp"
                    android:layout_height="278dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="-30dp"
                    android:src="@drawable/softer" />

                <TextView
                    android:id="@+id/activity5text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="20dp"
                    android:gravity="center"
                    android:text="@string/activity5Text2"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:id="@+id/activity5text3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:gravity="center"
                    android:text="@string/activity5Text3"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    />

            </LinearLayout>




        </LinearLayout>


    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="-71dp"
        android:background="#C0C0C0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >


        <LinearLayout
            android:id="@+id/button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/backhobies"
                android:drawableLeft="@drawable/hobies_icon"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="17dp"
                android:background="@drawable/ronded_buttonsblack"
                android:text="Hobbies"
                app:backgroundTint="@null"

                />

            <Button
                android:id="@+id/homeback"
                android:layout_width="78dp"
                android:layout_height="63dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/homebutton"
                app:backgroundTint="@null"
                />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>








