<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity2">



    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="408dp"
                android:layout_height="wrap_content"
                android:background="#271f27"
                android:minHeight="?actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:titleTextColor="@color/white" />


            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Education"
                android:textColor="@color/white"
                android:textSize="25sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginLeft="180dp" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="46dp"
                android:layout_height="31dp"
                app:layout_constraintBottom_toBottomOf="parent"

                app:layout_constraintEnd_toEndOf="@+id/toolbar"
                app:layout_constraintHorizontal_bias="0.291"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.52"
                app:srcCompat="@drawable/education_icon"
                tools:ignore="MissingConstraints" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.appbar.AppBarLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/text1activity2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/text1activity2"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold"

                    />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/school" />

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center"
                    android:src="@drawable/school_logo" />


                <TextView
                    android:id="@+id/text2activity2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/text2activity2"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/text3activity2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/text3activity2"
                    android:textColor="@color/black"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/text4activity2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="20dp"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="25sp" />




            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="77dp"
        android:layout_marginTop="-71dp"
        android:background="#C0C0C0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >


        <LinearLayout
            android:id="@+id/education"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:gravity="center|bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/porfile"
                android:drawableLeft="@drawable/person"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:background="@drawable/ronded_buttonsblack"
                android:text="Porfolio"
                app:backgroundTint="@null" />

            <Button
                android:id="@+id/home_button"
                android:layout_width="78dp"
                android:layout_height="63dp"
                android:layout_marginLeft="0dp"
                android:background="@drawable/homebutton"
                app:backgroundTint="@null" />


            <Button
                android:id="@+id/skillsactivity2"
                android:drawableLeft="@drawable/thumb_up_alt_24"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="@drawable/ronded_buttonsblack"
                android:text="Skills"
                app:backgroundTint="@null" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>








